Revert "feat: Run each container on the host network"
This reverts commit f41a9d7f38e484e6720c59c9b7c13ceb9ed286ae.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,8 @@ services:
       # Use single node discovery in order to disable production mode and avoid bootstrap checks.
       # see: https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
       discovery.type: single-node
-    network_mode: host
+    networks:
+      - elk
 
   logstash:
     build:
@@ -46,7 +47,8 @@ services:
       - "9600:9600"
     environment:
       LS_JAVA_OPTS: "-Xmx256m -Xms256m"
-    network_mode: host
+    networks:
+      - elk
     depends_on:
       - elasticsearch
 
@@ -62,9 +64,14 @@ services:
         read_only: true
     ports:
       - "5601:5601"
+    networks:
+      - elk
     depends_on:
       - elasticsearch
-    network_mode: host
+
+networks:
+  elk:
+    driver: bridge
 
 volumes:
   elasticsearch:
