--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -12,7 +12,7 @@ input {
 
 output {
 	elasticsearch {
-		hosts => "0.0.0.0:9200"
+		hosts => "elasticsearch:9200"
 		user => "elastic"
 		password => "changeme"
 		ecs_compatibility => disabled
