Prepare .env with easier-to-change values

--- a/.env
+++ b/.env
@@ -1,1 +1,21 @@
 ELK_VERSION=7.10.2
+
+
+# Name of the ELK cluster
+CLUSTER_NAME=docker-cluster
+# Publicly/LAN accessible IP for the ELK stack
+PUBLIC_IP=127.0.0.1
+# access kibana/elastic http interfaces over http/https 
+SCHEMA=http
+ENCRYPTION_KEY=fe5776af7eefb3e2ef7d5eba9da6c168
+
+# To be replaced with a real generated passwords after bootstrap.
+ELASTIC_PASSWORD=changeme
+# Change to kibana_system after bootstrap
+KIBANA_SYSTEM_USER=elastic
+KIBANA_SYSTEM_PASSWORD=changeme
+# Change to kibana_system after bootstrap
+LOGSTASH_SYSTEM_USER=elastic
+LOGSTASH_SYSTEM_PASSWORD=changeme
+
+
