--- a/.env
+++ b/.env
@@ -1,21 +1,35 @@
 ELK_VERSION=7.10.2
 
-
 # Name of the ELK cluster
 CLUSTER_NAME=docker-cluster
-# Publicly/LAN accessible IP for the ELK stack
+
+# COMPETITION TODO
+# Change to Publicly/LAN accessible IP for the ELK stack
 PUBLIC_IP=127.0.0.1
-# access kibana/elastic http interfaces over http/https 
+KIBANA_PORT=5601
+
+# Change to https if we're using tls
 SCHEMA=http
+
+# Change this to another 32 length string
 ENCRYPTION_KEY=fe5776af7eefb3e2ef7d5eba9da6c168
 
 # To be replaced with a real generated passwords after bootstrap.
+# Password for elastic
 ELASTIC_PASSWORD=changeme
+
 # Change to kibana_system after bootstrap
+#KIBANA_SYSTEM_USER=kibana_system
 KIBANA_SYSTEM_USER=elastic
+# To be replaced with a real generated passwords after bootstrap.
+# Password for kibana_system
 KIBANA_SYSTEM_PASSWORD=changeme
-# Change to kibana_system after bootstrap
+
+# Change to logstash_system after bootstrap
+#LOGSTASH_SYSTEM_USER=logstash_system
 LOGSTASH_SYSTEM_USER=elastic
+# To be replaced with a real generated passwords after bootstrap.
+# Password for logstash_system
 LOGSTASH_SYSTEM_PASSWORD=changeme
 
 
