Add elasticsearch host for fleet

--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ CLUSTER_NAME=docker-cluster
 # Change to Publicly/LAN accessible IP for the ELK stack
 PUBLIC_IP=127.0.0.1
 KIBANA_PORT=5601
+ES_PORT=9200
 
 # Change to https if we're using tls
 SCHEMA=http
