--- a/kibana/config/kibana.yml
+++ b/kibana/config/kibana.yml
@@ -22,3 +22,4 @@ xpack.fleet.agents.tlsCheckDisabled: true
 
 # Advertised address to fleet
 xpack.fleet.agents.kibana.host: ${SCHEMA}://${PUBLIC_IP}:${KIBANA_PORT}
+xpack.fleet.agents.elasticsearch.host: ${SCHEMA}://${PUBLIC_IP}:${ES_PORT}
